--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -6,7 +6,7 @@ where we are right now https://youtu.be/kkqVTDbfYp4?t=2795
 ** TODO move init.el to here
 
 * Usage
-org-bable-tangle
+M-x org-bable-tangle
 
 * ui configuration
 #+begin_src emacs-lisp
@@ -59,7 +59,110 @@ org-bable-tangle
 (setq use-package-always-ensure t)
 #+end_src
 ** Packages
+*** Command Autocompletion Packages 
+#+begin_src emacs-lisp
+;; better search
+(use-package swiper)
+;; better commands
+(use-package counsel)
+;; autocompletion on commands (?)
+(use-package ivy
+  :diminish
+  :bind (("C-s" . swiper)
+         :map ivy-minibuffer-map
+         ("TAB" . ivy-alt-done)	
+         ("C-l" . ivy-alt-done)
+         ("C-j" . ivy-next-line)
+         ("C-k" . ivy-previous-line)
+         :map ivy-switch-buffer-map
+         ("C-k" . ivy-previous-line)
+         ("C-l" . ivy-done)
+         ("C-d" . ivy-switch-buffer-kill)
+         :map ivy-reverse-i-search-map
+         ("C-k" . ivy-previous-line)
+	 ("C-d" . ivy-reverse-i-search-kill))
+  :demand
+  :config
+  (ivy-mode 1))
+;; better ivy autocompletion
+(use-package ivy-rich
+  :init
+  (ivy-rich-mode 1))
 
+;; counsel M+X
+(use-package counsel
+  :bind (("M-x" . counsel-M-x)
+	 ("C-x b" . counsel-ibuffer)
+	 ("C-x C-f" . counsel-find-file)
+	 :map minibuffer-local-map
+	 ("C-r" . 'counsel-minibuffer-history))
+  :config
+  (setq ivy-inital-inputs-alist nil))
+#+end_src
+*** Custom Themes
+#+begin_src emacs-lisp
+  (use-package doom-themes
+  :ensure t
+  :config
+  ;; Global settings (defaults)
+  (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
+        doom-themes-enable-italic t) ; if nil, italics is universally disabled
+  ;; load the theme
+  (load-theme 'doom-monokai-pro t)
+
+  ;; Enable flashing mode-line on errors
+  (doom-themes-visual-bell-config))
+  ;; Enable custom neotree theme (all-the-icons must be installed!)
+  ;;(doom-themes-neotree-config)
+  ;; or for treemacs users
+  ;;(setq doom-themes-treemacs-theme "doom-atom") ; use "doom-colors" for less minimal icon theme
+  ;;(doom-themes-treemacs-config)
+  ;; Corrects (and improves) org-mode's native fontification.
+  ;;(doom-themes-org-config))
+#+end_src
+*** Nerd-Fonts (All of the Icons doesnt work for me)
+#+begin_src emacs-lisp
+(use-package nerd-icons
+  :custom
+  ;; "Symbols Nerd Font Mono" is the default and is recommended
+  ;; but you can use any other Nerd Font if you want
+  (nerd-icons-font-family "JetBrainsMono NF")
+  )
+#+end_src
+*** Rainbow Delimiters
+**** TODO find something like this for other languages
+#+begin_src emacs-lisp
+(use-package rainbow-delimiters
+  :hook (prog-mode . rainbow-delimiters-mode))
+#+end_src
+*** Keybinding autocompletion
+#+begin_src emacs-lisp
+(use-package which-key
+  :init (which-key-mode)
+  :diminish which-key-mode
+  :config
+  (setq which-key-idle-delay 1))
+#+end_src
+*** Custom Modeline
+#+begin_src emacs-lisp
+(use-package doom-modeline
+  :ensure t
+  :init (doom-modeline-mode 1)
+  :custom ((doom-modeline-height 35)))
+#+end_src
+*** Better help menu
+#+begin_src emacs-lisp
+(use-package helpful
+  :ensure t
+  :custom
+  (counsel-describe-function-function #'helpful-callable)
+  (counsel-describe-variable-function #'helpful-variable)
+  :bind
+  ([remap describe-function ] . counsel-describe-function)
+  ([remap describe-command] . helpful-command)
+  ([remap describe-variable] . counsel-describe-variable)
+  ([remap describe-key] . helpful-key))
+#+end_src
 * Org Mode Configuration Setup
 ** Babel Languages
 #+begin_src emacs-lisp
