--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -59,6 +59,10 @@ M-x org-bable-tangle
 (setq use-package-always-ensure t)
 #+end_src
 ** Packages
+*** Command Log Mode
+#+begin_src emacs-lisp
+  (use-package command-log-mode)
+#+end_src
 *** Command Autocompletion Packages 
 #+begin_src emacs-lisp
 ;; better search
@@ -162,6 +166,206 @@ M-x org-bable-tangle
   ([remap describe-command] . helpful-command)
   ([remap describe-variable] . counsel-describe-variable)
   ([remap describe-key] . helpful-key))
+#+end_src
+*** General Leader Key
+#+begin_src emacs-lisp
+(use-package general
+  :config
+  (general-create-definer sakomacs/leader-keys
+    :keymaps `(normal insert visual emacs)
+    :prefix "SPC"
+    :global-prefix "C-SPC")
+  (sakomacs/leader-keys
+    "t" `(:ignore t :which-key "toggles")
+    "tt" `(counsel-load-theme :which-key "choose theme")))
+#+end_src 
+*** Evil Mode (vim)
+#+begin_src emacs-lisp
+(use-package evil
+  :init
+  (setq evil-want-integration t)
+  (setq evil-want-keybinding nil)
+  (setq evil-want-C-u-scroll t)
+  (setq evil-want-C-i-jump nil)
+  :hook (evil-mode . sakomacs/evil-hook)
+  :ensure t
+  :demand
+  :config
+  (evil-mode 1)
+  (define-key evil-insert-state-map (kbd "C-g") 'evil-normal-state)
+  (define-key evil-insert-state-map (kbd "C-h") `evil-delete-backward-char-and-join)
+
+  ;; visual line motion
+  (evil-global-set-key 'motion "j" 'evil-next-visual-line)
+  (evil-global-set-key 'motion "k" 'evil-previous-visual-line)
+
+  (evil-set-initial-state 'messages-buffer-mode 'normal)
+  (evil-set-initial-state 'dashboard-mode 'normal))
+
+;; extra things for Evil
+(use-package evil-collection
+  :after evil
+  :config
+  (evil-collection-init))
+#+end_src 
+*** Hydra for scaling text
+#+begin_src emacs-lisp
+(use-package hydra)
+(defhydra hydra-text-scale (:timeout 4)
+  "scale text"
+  ("j" text-scale-increase "in")
+  ("k" text-scale-decrease "out")
+  ("f" nil "finished" :exit t))
+
+(sakomacs/leader-keys
+  "ts" '(hydra-text-scale/body :which-key "scale text"))
+#+end_src
+*** Helpful for projects
+#+begin_src emacs-lisp
+(use-package projectile
+  :diminish projectile-mode
+  :demand
+  :config (projectile-mode)
+  :custom ((projectile-completion-system 'ivy))
+  :bind-keymap
+  ("C-c p" . projectile-command-map)
+  :init
+  (when (file-directory-p "~/dev")
+    (setq projectile-project-search-path '("~/dev")))
+  (setq projectile-switch-project-action #'projectile-dired))
+
+(use-package counsel-projectile
+  :config (counsel-projectile-mode))
+#+end_src 
+*** Org-Mode
+#+begin_src emacs-lisp
+(defun sakomacs/org-mode-setup ()
+  (org-indent-mode)
+  (variable-pitch-mode 1)
+  (visual-line-mode 1))
+
+(use-package org
+  :hook (org-mode . sakomacs/org-mode-setup)
+  :config
+  (setq org-ellipsis "▼")
+  (setq org-agenda-start-with-log-mode t)
+  (setq org-log-done 'time)
+  (setq org-log-into-drawer t)
+
+  ;; org habits thing
+  (require 'org-habit)
+  (add-to-list 'org-modules 'org-habit)
+  (setq org-habit-graph-column 60)
+
+  ;; archive thingy i forgot
+  (setq org-refile-targets
+      '(("archive.org" :maxlevel . 1)))
+
+  ;; save org buffer before refile
+  (advice-add 'org-refile :after 'org-save-all-org-buffers)
+
+  ;; org mode src thing
+  (require 'org-tempo)
+
+  (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
+  (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
+  (add-to-list 'org-structure-template-alist '("py" . "src python"))
+  
+  ;; extra keywords
+  (setq org-todo-keywords
+   '((sequence "TODO(t)" "NEXT(n)" "|" "DONE(d!)")
+     (sequence "PLAN(p)" "READY(r)" "ACTIVE(a)" "HOLD(h)" "|" "COMPLETED(c)" "CANC(k@)")  )
+
+  ;; custom commands for org-agenda
+ (setq org-agenda-custom-commands
+   '(("d" "Dashboard"
+     ((agenda "" ((org-deadline-warning-days 7)))
+      (todo "NEXT"
+        ((org-agenda-overriding-header "Next Tasks")))
+      (tags-todo "agenda/ACTIVE" ((org-agenda-overriding-header "Active Projects")))))
+
+    ("n" "Next Tasks"
+     ((todo "NEXT"
+        ((org-agenda-overriding-header "Next Tasks")))))
+
+    ("W" "Work Tasks" tags-todo "+work-email")
+
+    ;; Low-effort next actions
+    ("e" tags-todo "+TODO=\"NEXT\"+Effort<15&+Effort>0"
+     ((org-agenda-overriding-header "Low Effort Tasks")
+      (org-agenda-max-todos 20)
+      (org-agenda-files org-agenda-files)))
+
+    ("w" "Workflow Status"
+      (todo "PLAN"
+            ((org-agenda-overriding-header "In Planning")
+             (org-agenda-todo-list-sublevels nil)
+             (org-agenda-files org-agenda-files)))
+      (todo "READY"
+            ((org-agenda-overriding-header "Ready for Work")
+             (org-agenda-files org-agenda-files)))
+      (todo "ACTIVE"
+            ((org-agenda-overriding-header "Active Projects")
+             (org-agenda-files org-agenda-files)))
+      (todo "COMPLETED"
+            ((org-agenda-overriding-header "Completed Projects")
+             (org-agenda-files org-agenda-files)))
+      (todo "CANC"
+            ((org-agenda-overriding-header "Cancelled Projects")
+             (org-agenda-files org-agenda-files))))))) 
+
+  (setq org-agenda-files
+	'("~/org/tasks.org")
+	'("~/org/work.org"))
+
+  (setq org-adapt-indentation t)
+
+  (setq org-capture-templates
+  `(("t" "Tasks / Projects")
+    ("tt" "Task" entry (file+olp "~/org/tasks.org" "Inbox")
+    "* TODO %?\n  %U\n  %a\n  %i" :empty-lines 1))))
+
+
+;; i need more bullets, i need more bullets, i need more bullets, bigger weapons, bigger weapons, bigger weapons
+;; thanks for the protein sir
+(use-package org-bullets
+  :after org
+  :hook (org-mode . org-bullets-mode)
+  :custom
+  (org-bullets-bullet-list '("◉" "○" "●" "○" "●" "○" "●")))
+
+;; word
+(defun sakomacs/org-mode-visual-fill ()
+  (setq visual-fill-column-width 100
+	visual-fill-column-center-text t)
+  (visual-fill-column-mode 1))
+
+(use-package visual-fill-column
+  :hook (org-mode . sakomacs/org-mode-visual-fill))
+#+end_src
+*** Development Specific
+**** Magit (git in emacs)
+#+begin_src emacs-lisp
+(use-package magit
+  :custom
+  (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
+#+end_src
+**** Forge for Magit (Adds github, gitlab, etc PRs and Issues to magit)
+make sure to setup authinfo
+#+begin_src emacs-lisp
+(use-package forge
+  :after magit)
+(setq auth-sources '("~/.authinfo"))
+#+end_src
+**** Lsp-mode
+***** Inital Setup
+#+begin_src emacs-lisp
+(use-package lsp-mode
+  :commands (lsp lsp-deferred)
+  :init
+  (setq lsp-keymap-prefix "C-c l")
+  :config
+  (lsp-enable-which-key-integration t))
 #+end_src
 * Org Mode Configuration Setup
 ** Babel Languages
