--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1,5 +1,5 @@
 #+title Sakomacs configuration
-#+PROPERTY: header-args:emacs-lisp :tangle ./init-new.el
+#+PROPERTY: header-args:emacs-lisp :tangle ./init.el
 
 * Emacs from scratch
 where we are right now https://youtu.be/kkqVTDbfYp4?t=2795
