--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -7,7 +7,8 @@ CLOSED: [2023-09-08 Fri 23:20]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2023-09-08 Fri 23:20]
 :END:
-video: https://youtu.be/E-NAM9U5JYE?t=1760
+** TODO Finish Video
+video: https://youtu.be/E-NAM9U5JYE?t=1815
 
 * Usage
 M-x org-bable-tangle
@@ -67,12 +68,12 @@ M-x org-bable-tangle
 (require 'use-package)
 (setq use-package-always-ensure t)
 #+end_src
-** Packages
-*** Command Log Mode
+* Packages
+** Command Log Mode
 #+begin_src emacs-lisp
   (use-package command-log-mode)
 #+end_src
-*** Command Autocompletion Packages 
+** Command Autocompletion Packages 
 #+begin_src emacs-lisp
 ;; better search
 (use-package swiper)
@@ -112,7 +113,7 @@ M-x org-bable-tangle
   :config
   (setq ivy-inital-inputs-alist nil))
 #+end_src
-*** Custom Themes
+** Custom Themes
 #+begin_src emacs-lisp
   (use-package doom-themes
   :ensure t
@@ -121,7 +122,7 @@ M-x org-bable-tangle
   (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
         doom-themes-enable-italic t) ; if nil, italics is universally disabled
   ;; load the theme
-  (load-theme 'doom-monokai-pro t)
+  (load-theme 'doom-challenger-deep t)
 
   ;; Enable flashing mode-line on errors
   (doom-themes-visual-bell-config))
@@ -133,7 +134,7 @@ M-x org-bable-tangle
   ;; Corrects (and improves) org-mode's native fontification.
   ;;(doom-themes-org-config))
 #+end_src
-*** Nerd-Fonts (All of the Icons doesnt work for me)
+** Nerd-Fonts (All of the Icons doesnt work for me)
 #+begin_src emacs-lisp
 (use-package nerd-icons
   :custom
@@ -142,13 +143,13 @@ M-x org-bable-tangle
   (nerd-icons-font-family "JetBrainsMono NF")
   )
 #+end_src
-*** Rainbow Delimiters
+** Rainbow Delimiters
 **** TODO find something like this for other languages
 #+begin_src emacs-lisp
 (use-package rainbow-delimiters
   :hook (prog-mode . rainbow-delimiters-mode))
 #+end_src
-*** Keybinding autocompletion
+** Keybinding autocompletion
 #+begin_src emacs-lisp
 (use-package which-key
   :init (which-key-mode)
@@ -156,14 +157,14 @@ M-x org-bable-tangle
   :config
   (setq which-key-idle-delay 1))
 #+end_src
-*** Custom Modeline
+** Custom Modeline
 #+begin_src emacs-lisp
 (use-package doom-modeline
   :ensure t
   :init (doom-modeline-mode 1)
   :custom ((doom-modeline-height 35)))
 #+end_src
-*** Better help menu
+** Better help menu
 #+begin_src emacs-lisp
 (use-package helpful
   :ensure t
@@ -176,7 +177,7 @@ M-x org-bable-tangle
   ([remap describe-variable] . counsel-describe-variable)
   ([remap describe-key] . helpful-key))
 #+end_src
-*** General Leader Key
+** General Leader Key
 #+begin_src emacs-lisp
 (use-package general
   :config
@@ -188,7 +189,7 @@ M-x org-bable-tangle
     "t" `(:ignore t :which-key "toggles")
     "tt" `(counsel-load-theme :which-key "choose theme")))
 #+end_src 
-*** Evil Mode (vim)
+** Evil Mode (vim)
 #+begin_src emacs-lisp
 (use-package evil
   :init
@@ -217,7 +218,7 @@ M-x org-bable-tangle
   :config
   (evil-collection-init))
 #+end_src 
-*** Hydra for scaling text
+** Hydra for scaling text
 #+begin_src emacs-lisp
 (use-package hydra)
 (defhydra hydra-text-scale (:timeout 4)
@@ -229,7 +230,7 @@ M-x org-bable-tangle
 (sakomacs/leader-keys
   "ts" '(hydra-text-scale/body :which-key "scale text"))
 #+end_src
-*** Helpful for projects
+** Helpful for projects
 #+begin_src emacs-lisp
 (use-package projectile
   :diminish projectile-mode
@@ -246,7 +247,7 @@ M-x org-bable-tangle
 (use-package counsel-projectile
   :config (counsel-projectile-mode))
 #+end_src 
-*** Org-Mode
+** Org-Mode
 #+begin_src emacs-lisp
 (defun sakomacs/org-mode-setup ()
   (org-indent-mode)
@@ -352,22 +353,22 @@ M-x org-bable-tangle
 (use-package visual-fill-column
   :hook (org-mode . sakomacs/org-mode-visual-fill))
 #+end_src
-*** Dev Packages
-**** Magit (git in emacs)
+** Dev Packages
+*** Magit (git in emacs)
 #+begin_src emacs-lisp
 (use-package magit
   :custom
   (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
 #+end_src
-**** Forge for Magit (Adds github, gitlab, etc PRs and Issues to magit)
+*** Forge for Magit (Adds github, gitlab, etc PRs and Issues to magit)
 make sure to setup authinfo
 #+begin_src emacs-lisp
 (use-package forge
   :after magit)
 (setq auth-sources '("~/.authinfo"))
 #+end_src
-**** Lsp-mode
-***** Language Servers 
+*** Lsp-mode
+**** Language Servers 
 #+begin_src emacs-lisp
 (use-package lsp-mode
   :commands (lsp lsp-deferred)
@@ -376,8 +377,8 @@ make sure to setup authinfo
   :config
   (lsp-enable-which-key-integration t))
 #+end_src
-***** Languages
-****** Typescript
+**** Languages
+***** Typescript
 #+begin_src emacs-lisp
   (use-package js2-mode
   :mode "\\.js\\'"
