--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -284,7 +284,7 @@ M-x org-bable-tangle
   ;; extra keywords
   (setq org-todo-keywords
    '((sequence "TODO(t)" "NEXT(n)" "|" "DONE(d!)")
-     (sequence "PLAN(p)" "READY(r)" "ACTIVE(a)" "HOLD(h)" "|" "COMPLETED(c)" "CANC(k@)")  )
+     (sequence "PLAN(p)" "READY(r)" "ACTIVE(a)" "HOLD(h)" "|" "COMPLETED(c)" "CANC(k@)"))
 
   ;; custom commands for org-agenda
  (setq org-agenda-custom-commands
@@ -326,15 +326,9 @@ M-x org-bable-tangle
 
   (setq org-agenda-files
 	'("~/org/tasks.org")
-	'("~/org/work.org"))
+	 ("~/org/work.org"))
 
-  (setq org-adapt-indentation t)
-
-  (setq org-capture-templates
-  `(("t" "Tasks / Projects")
-    ("tt" "Task" entry (file+olp "~/org/tasks.org" "Inbox")
-    "* TODO %?\n  %U\n  %a\n  %i" :empty-lines 1))))
-
+  (setq org-adapt-indentation t))
 
 ;; i need more bullets, i need more bullets, i need more bullets, bigger weapons, bigger weapons, bigger weapons
 ;; thanks for the protein sir
