hold on im getting somewhere'

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -177,15 +177,16 @@ M-x org-bable-tangle
 #+end_src
 ** General Leader Key
 #+begin_src emacs-lisp
-(use-package general
-  :config
-  (general-create-definer sakomacs/leader-keys
-    :keymaps `(normal insert visual emacs)
-    :prefix "SPC"
-    :global-prefix "C-SPC")
-  (sakomacs/leader-keys
-    "t" `(:ignore t :which-key "toggles")
-    "tt" `(counsel-load-theme :which-key "choose theme")))
+  (use-package general
+    :config
+    (general-create-definer sakomacs/leader-keys
+      :keymaps `(normal insert visual emacs)
+      :prefix "SPC"
+      :global-prefix "C-SPC")
+    (sakomacs/leader-keys
+      "t" `(:ignore t :which-key "toggles")
+      "tt" `(counsel-load-theme :which-key "choose theme")
+      "ee" `(treemacs)))
 #+end_src 
 ** Evil Mode (vim)
 #+begin_src emacs-lisp
@@ -436,7 +437,6 @@ M-x org-bable-tangle
   (:map global-map
         ("M-0"       . treemacs-select-window)
         ("C-x t 1"   . treemacs-delete-other-windows)
-        ("SPC e"   . treemacs)
         ("C-x t d"   . treemacs-select-directory)
         ("C-x t B"   . treemacs-bookmark)
         ("C-x t C-t" . treemacs-find-file)
@@ -450,23 +450,10 @@ M-x org-bable-tangle
   :after (treemacs projectile)
   :ensure t)
 
-(use-package treemacs-icons-dired
-  :hook (dired-mode . treemacs-icons-dired-enable-once)
-  :ensure t)
-
 (use-package treemacs-magit
   :after (treemacs magit)
   :ensure t)
 
-(use-package treemacs-persp ;;treemacs-perspective if you use perspective.el vs. persp-mode
-  :after (treemacs persp-mode) ;;or perspective vs. persp-mode
-  :ensure t
-  :config (treemacs-set-scope-type 'Perspectives))
-
-(use-package treemacs-tab-bar ;;treemacs-tab-bar if you use tab-bar-mode
-  :after (treemacs)
-  :ensure t
-  :config (treemacs-set-scope-type 'Tabs))
 #+end_src
 ** Dev Packages
 *** Magit (git in emacs)
