--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -186,6 +186,7 @@ M-x org-bable-tangle
     (sakomacs/leader-keys
       "t" `(:ignore t :which-key "toggles")
       "tt" `(counsel-load-theme :which-key "choose theme")
+      "e" `(:ignore e :which-key "explorer")
       "ee" `(treemacs)))
 #+end_src 
 ** Evil Mode (vim)
