--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -187,7 +187,7 @@ M-x org-bable-tangle
       "t" `(:ignore t :which-key "toggles")
       "tt" `(counsel-load-theme :which-key "choose theme")
       "e" `(:ignore e :which-key "explorer")
-      "ee" `(treemacs)))
+      "ee" `(treemacs :which-key "treemacs")))
 #+end_src 
 ** Evil Mode (vim)
 #+begin_src emacs-lisp
