--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -29,7 +29,7 @@ M-x org-bable-tangle
     (dolist (mode '(org-mode-hook
                     term-mode-hook
                     eshell-mode-hook
-                    treemacs-mode))
+                    treemacs-mode-hook))
       (add-hook mode (lambda () (display-line-numbers-mode 0))))
     ;; Bell
     (setq visible-bell t)
