--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -43,7 +43,7 @@ M-x org-bable-tangle
 * Fonts
 
 #+begin_src emacs-lisp
-      (set-face-attribute `default nil :font "JetBrains Mono" :height 125)
+      (set-face-attribute `default nil :font "JetBrains Mono" :height 150)
 #+end_src
 
 * Package setup
@@ -545,4 +545,44 @@ make sure to setup authinfo
       (let ((org-confirm-babel-evaluate nil))
         (org-babel-tangle)))
     (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'sakomacs/org-babel-tangle-config))))
+#+end_src
+
+* Terminals
+** term-mode
+#+begin_src emacs-lisp
+  (use-package term
+  :config
+  (setq explicit-shell-file-name "zsh")
+#+end_src
+** EShell
+god dammit why are they making my shells in emacs lisp
+#+begin_src emacs-lisp
+(defun sakomacs/configure-eshell ()
+  ;; Save command history when commands are entered
+  (add-hook 'eshell-pre-command-hook 'eshell-save-some-history)
+
+  ;; Truncate buffer for performance
+  (add-to-list 'eshell-output-filter-functions 'eshell-truncate-buffer)
+
+  ;; Bind some useful keys for evil-mode
+  (evil-define-key '(normal insert visual) eshell-mode-map (kbd "C-r") 'counsel-esh-history)
+  (evil-define-key '(normal insert visual) eshell-mode-map (kbd "<home>") 'eshell-bol)
+  (evil-normalize-keymaps)
+
+  (setq eshell-history-size         10000
+        eshell-buffer-maximum-lines 10000
+        eshell-hist-ignoredups t
+        eshell-scroll-to-bottom-on-input t))
+
+(use-package eshell-git-prompt)
+
+(use-package eshell
+  :hook (eshell-first-time-mode . sakomacs/configure-eshell)
+  :config
+
+  (with-eval-after-load 'esh-opt
+    (setq eshell-destroy-buffer-when-process-dies t)
+    (setq eshell-visual-commands '("htop" "zsh" "vim")))
+
+  (eshell-git-prompt-use-theme 'powerline))
 #+end_src
