--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -507,6 +507,11 @@ make sure to setup authinfo
   :mode "\\.js\\'"
   :hook (js2-mode . lsp-deferred))
 #+end_src
+***** Nix
+#+begin_src emacs-lisp
+(use-package nix-mode
+ :mode "\\.nix\\'")
+#+end_src
 *** Commenter
 #+begin_src emacs-lisp
   (use-package evil-nerd-commenter
