--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -509,8 +509,12 @@ make sure to setup authinfo
 #+end_src
 ***** Nix
 #+begin_src emacs-lisp
-(use-package nix-mode
- :mode "\\.nix\\'")
+    (use-package nix-mode
+     :mode "\\.nix\\'")
+  (use-package nixos-options)
+  (use-package ivy-nixos-options)
+  (use-package company-nixos-options)
+  (add-to-list 'company-backends 'company-nixos-options)
 #+end_src
 *** Commenter
 #+begin_src emacs-lisp
