--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -538,10 +538,7 @@ make sure to setup authinfo
 #+begin_src emacs-lisp
 (use-package format-all
   :custom
-  ((setq format-all-formatters (("Nix" alejandra))))
-  :hook
-  ((format-all-mode . format-all-ensure-formatter)
-   (prog-mode . format-all-mode)))
+  ((setq format-all-formatters (("Nix" alejandra)))))
 #+end_src
 ** Dired (quick file management in emacs)
 Dired is a built-in file manager for Emacs that does some pretty amazing things!  Here are some key bindings you should try out:
