Sync Windows Configuration

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -280,6 +280,7 @@ M-x org-bable-tangle
         '("~/org/tasks.org"
          "~/org/school.org"
          "~/org/daily.org"
+          "~/org/irl.org"
           "~/org/work.org"))
 
     ;; org mode src thing
