--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -269,8 +269,7 @@ M-x org-bable-tangle
 
     ;; archive thingy i forgot
       (setq org-refile-targets
-    '(("archive.org" :maxlevel . 1)
-      ("tasks.org" :maxlevel . 1)))
+    '(("archive.org" :maxlevel . 1)))
 
     ;; save org buffer before refile
     (advice-add 'org-refile :after 'org-save-all-org-buffers)
@@ -280,7 +279,7 @@ M-x org-bable-tangle
         '("~/org/tasks.org"
          "~/org/school.org"
          "~/org/daily.org"
-          "~/org/irl.org"
+         "~/org/irl.org"
           "~/org/work.org"))
 
     ;; org mode src thing
@@ -406,6 +405,18 @@ M-x org-bable-tangle
 
   (use-package visual-fill-column
     :hook (org-mode . sakomacs/org-mode-visual-fill))
+#+end_src
+** Org-Roam
+#+begin_src emacs-lisp
+  (use-package org-roam
+  :ensure t
+  :custom
+  (org-roam-directory "~/org"
+                      :bind (("C-c n l" . org-roam-buffer-toggle)
+                             ("C-c n f" . org-roam-node-find)
+                             ("C-c n i" . org-roam-node-insert))
+                      :config
+                      (org-roam-setup)))
 #+end_src
 ** Treemacs
 #+begin_src emacs-lisp
