--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -486,6 +486,7 @@ M-x org-bable-tangle
     ;;(treemacs-resize-icons 44)
 
     (treemacs-follow-mode t)
+    (treemacs-tag-follow-mode t)
     (treemacs-filewatch-mode t)
     (treemacs-fringe-indicator-mode 'always)
     (when treemacs-python-executable
@@ -583,6 +584,12 @@ make sure to setup authinfo
 #+begin_src emacs-lisp
 (add-hook 'c-mode-hook 'lsp)
 (add-hook 'c++-mode-hook 'lsp)
+#+end_src
+***** Cmake
+#+begin_src emacs-lisp
+  (use-package cmake-mode
+    :mode "CMakeLists.txt"
+    :hook (cmake-mode . lsp))
 #+end_src
 ***** Python
 #+begin_src emacs-lisp
