--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -120,7 +120,7 @@ M-x org-bable-tangle
   (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
         doom-themes-enable-italic t) ; if nil, italics is universally disabled
   ;; load the theme
-  (load-theme 'doom-challenger-deep t)
+  (load-theme 'doom-monokai-pro t)
 
   ;; Enable flashing mode-line on errors
   (doom-themes-visual-bell-config))
@@ -557,7 +557,7 @@ make sure to setup authinfo
       :config
       (lsp-enable-which-key-integration t))
 #+end_src
-**** Better lsp mode ui
+**** Lsp-ui 
 #+begin_src emacs-lisp
   (use-package lsp-ui
     :hook (lsp-mode . lsp-ui-mode)
@@ -585,7 +585,7 @@ make sure to setup authinfo
 (add-hook 'c-mode-hook 'lsp)
 (add-hook 'c++-mode-hook 'lsp)
 #+end_src
-***** Cmake
+***** CMake
 #+begin_src emacs-lisp
   (use-package cmake-mode
     :mode "CMakeLists.txt"
