--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1,4 +1,4 @@
-#+title Sakomacs configuration
+#+title: Sakomacs configuration
 #+PROPERTY: header-args:emacs-lisp :tangle ./init.el
 
 * Emacs from scratch
