--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -12,6 +12,20 @@ video: https://www.youtube.com/watch?v=wa_wZIuT9Vw
 * Usage
 M-x org-bable-tangle
 
+* Default Enconding
+#+begin_src emacs-lisp
+  (setq utf-translate-cjk-mode nil) ; disable CJK coding/encoding (Chinese/Japanese/Korean characters)
+  (set-language-environment 'utf-8)
+  (set-keyboard-coding-system 'utf-8) ; For old Carbon emacs on OS X only
+  (setq locale-coding-system 'utf-8)
+  (set-default-coding-systems 'utf-8)
+  (set-terminal-coding-system 'utf-8)
+  (set-selection-coding-system
+    (if (eq system-type 'windows-nt)
+        'utf-16-le  ;; https://rufflewind.com/2014-07-20/pasting-unicode-in-emacs-on-windows
+      'utf-8))
+  (prefer-coding-system 'utf-8)
+#+end_src
 * ui configuration
 #+begin_src emacs-lisp
   ;; UI/UX
@@ -34,7 +48,6 @@ M-x org-bable-tangle
   ;; Bell
   (setq visible-bell t)
 #+end_src
-
 * Keymaps
 #+begin_src emacs-lisp
 (global-set-key (kbd "C-M-j") 'counsel-switch-buffer)
@@ -45,6 +58,7 @@ M-x org-bable-tangle
 #+begin_src emacs-lisp
   (set-face-attribute `default nil :font "JetBrains Mono" :height 125)
   (setq frame-resize-pixelwise t)
+  (setq default-frame-alist '((font . "JetBrains Mono")))
 #+end_src
 
 * Package setup
@@ -583,9 +597,9 @@ make sure to setup authinfo
 #+end_src
 ***** HTML/CSS
 #+begin_src emacs-lisp
-    (use-package web-mode
-    :mode ("\\.html\\"
-           "\\.css\\")) 
+  (use-package web-mode
+    :mode (("\\.html\\" . web-mode)
+              ("\\.css\\" . web-mode)))
 #+end_src
 ***** C/C++
 #+begin_src emacs-lisp
