--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -191,17 +191,19 @@ M-x org-bable-tangle
 #+end_src
 ** General Leader Key
 #+begin_src emacs-lisp
-  (use-package general
-    :config
-    (general-create-definer sakomacs/leader-keys
-      :keymaps `(normal insert visual emacs)
-      :prefix "SPC"
-      :global-prefix "C-SPC")
-    (sakomacs/leader-keys
-      "t" `(:ignore t :which-key "toggles")
-      "tt" `(counsel-load-theme :which-key "choose theme")
-      "e" `(:ignore e :which-key "explorer")
-      "ee" `(treemacs :which-key "treemacs")))
+      (use-package general
+        :config
+        (general-create-definer sakomacs/leader-keys
+          :keymaps `(normal insert visual emacs)
+          :prefix "SPC"
+          :global-prefix "C-SPC")
+        (sakomacs/leader-keys
+          "t" `(:ignore t :which-key "toggles")
+          "tt" `(counsel-load-theme :which-key "choose theme")
+          "e" `(:ignore e :which-key "explorer")
+          "ee" `(treemacs :which-key "treemacs")
+          "p" `(:ignore p :which-key "projects")
+          "pp" `(projectile-switch-project :which-key "open project")))
 #+end_src 
 ** Evil Mode (vim)
 #+begin_src emacs-lisp
@@ -589,17 +591,17 @@ make sure to setup authinfo
 (use-package lsp-ivy)
 #+end_src
 **** Languages
+***** HTML/CSS
+#+begin_src emacs-lisp
+  (use-package web-mode
+       :mode ("\\.html\\'"
+               "\\.css\\'"))
+#+end_src
 ***** Javascript 
 #+begin_src emacs-lisp
   (use-package js2-mode
   :mode "\\.js\\'"
   :hook (js2-mode . lsp))
-#+end_src
-***** HTML/CSS
-#+begin_src emacs-lisp
-  (use-package web-mode
-    :mode (("\\.html\\" . web-mode)
-              ("\\.css\\" . web-mode)))
 #+end_src
 ***** C/C++
 #+begin_src emacs-lisp
