--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -26,7 +26,7 @@ M-x org-bable-tangle
       'utf-8))
   (prefer-coding-system 'utf-8)
 #+end_src
-* ui configuration
+* UI 
 #+begin_src emacs-lisp
     ;; UI/UX
     (setq inhibit-splash-screen t)
@@ -49,6 +49,15 @@ M-x org-bable-tangle
     ;; Bell
     (setq visible-bell t)
 #+end_src
+* EmacsClient UI
+#+begin_src emacs-lisp
+        (setq frame-resize-pixelwise t)
+        ;; ui settings apparently go below
+        (setq default-frame-alist '((font . "JetBrains Mono")
+                                    '(vertical-scroll-bars . nil)
+                                    '(horizontal-scroll-bars . nil)))
+
+#+end_src
 * Keymaps
 #+begin_src emacs-lisp
 (global-set-key (kbd "C-M-j") 'counsel-switch-buffer)
@@ -61,7 +70,6 @@ M-x org-bable-tangle
   (setq frame-resize-pixelwise t)
   (setq default-frame-alist '((font . "JetBrains Mono")))
 #+end_src
-
 * Package setup
 #+begin_src emacs-lisp
 (require `package)
