--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -197,21 +197,23 @@ M-x org-bable-tangle
 #+end_src
 ** General Leader Key
 #+begin_src emacs-lisp
-          (use-package general
-            :config
-            (general-create-definer sakomacs/leader-keys
-              :keymaps `(normal insert visual emacs)
-              :prefix "SPC"
-              :global-prefix "C-SPC")
-            (sakomacs/leader-keys
-              "t" `(:ignore t :which-key "toggles")
-              "tt" `(counsel-load-theme :which-key "choose theme")
-              "e" `(:ignore e :which-key "explorer")
-              "ee" `(treemacs :which-key "treemacs")
-              "p" `(:ignore p :which-key "projects")
-              "pp" `(projectile-switch-project :which-key "open project")
-              "o" `(:ignore o :which-key "org")
-              "oa" `(org-agenda :which-key "agenda")))
+              (use-package general
+                :config
+                (general-create-definer sakomacs/leader-keys
+                  :keymaps `(normal insert visual emacs)
+                  :prefix "SPC"
+                  :global-prefix "C-SPC")
+                (sakomacs/leader-keys
+                  "t" `(:ignore t :which-key "toggles")
+                  "tt" `(counsel-load-theme :which-key "choose theme")
+                  "e" `(:ignore e :which-key "explorer")
+                  "ee" `(treemacs :which-key "treemacs")
+                  "p" `(:ignore p :which-key "projects")
+                  "pp" `(projectile-switch-project :which-key "open project")
+                  "o" `(:ignore o :which-key "org")
+                  "oa" `(org-agenda :which-key "agenda")
+                  "g" `(:ignore g :which-key "git")
+                  "gs" `(magit-status :which-key "status")))
 #+end_src 
 ** Emacs-Dashboard
 #+begin_src emacs-lisp
