Sync Windows Config

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -331,6 +331,9 @@ M-x org-bable-tangle
          "~/org/irl.org"
           "~/org/work.org"))
 
+      ;; Following
+      (setq org-return-follows-link  t)
+
     ;; org mode src thing
     (require 'org-tempo)
 
