--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -58,6 +58,16 @@ M-x org-bable-tangle
   ;; repeat keybinds
   (repeat-mode)
 #+end_src
+* Move backup (filename~.ending) files
+#+begin_src emacs-lisp
+(setq backup-directory-alist '(("." . "~/.emacs.d/backup"))
+  backup-by-copying t    ; Don't delink hardlinks
+  version-control t      ; Use version numbers on backups
+  delete-old-versions t  ; Automatically delete excess backups
+  kept-new-versions 20   ; how many of the newest versions to keep
+  kept-old-versions 5    ; and how many of the old
+  )
+#+end_src
 * Fonts
 #+begin_src emacs-lisp
   (set-face-attribute `default nil :font "JetBrains Mono" :height 125)
