--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -2095,7 +2095,7 @@ make sure to setup authinfo
   (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
         doom-themes-enable-italic t) ; if nil, italics is universally disabled
   ;; load the theme
-  (load-theme 'doom-dark+ t)
+  (load-theme 'doom-peacock t)
 
   ;; Enable flashing mode-line on errors
   (doom-themes-visual-bell-config))
